[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/inventory/assets/bg.png" type="Texture" id=1]
[ext_resource path="res://ui/inventory/assets/plus.png" type="Texture" id=2]
[ext_resource path="res://ui/inventory/assets/plus_disabled.png" type="Texture" id=3]
[ext_resource path="res://ui/inventory/assets/tiles/empty.png" type="Texture" id=4]
[ext_resource path="res://ui/assets/CheapProFonts - GeometrySoftPro-BoldN.otf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/inventory/assets/tiles/armor.png" type="Texture" id=6]
[ext_resource path="res://ui/inventory/assets/tiles/weapon.png" type="Texture" id=7]
[ext_resource path="res://ui/inventory/assets/tiles/headgear.png" type="Texture" id=8]
[ext_resource path="res://ui/inventory/assets/tiles/charm.png" type="Texture" id=9]
[ext_resource path="res://ui/inventory/Inventory.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[node name="Inventory" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1092.0
margin_bottom = -460.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 818.0
margin_bottom = 610.0
texture = ExtResource( 1 )

[node name="HSplitContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 818.0
margin_bottom = 610.0
custom_constants/separation = 0

[node name="InventoryVBox" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 0

[node name="Placeholder" type="Control" parent="HSplitContainer/InventoryVBox"]
margin_right = 600.0
margin_bottom = 60.0
rect_min_size = Vector2( 600, 60 )

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/InventoryVBox"]
margin_top = 64.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="HSplitContainer/InventoryVBox/CenterContainer"]
margin_left = 80.0
margin_top = 48.0
margin_right = 520.0
margin_bottom = 488.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="ItemSlot" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot2" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 90.0
margin_right = 170.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot3" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 180.0
margin_right = 260.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot4" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 270.0
margin_right = 350.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot4"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot5" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 360.0
margin_right = 440.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot5"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot6" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_top = 90.0
margin_right = 80.0
margin_bottom = 170.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot6"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot7" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 90.0
margin_top = 90.0
margin_right = 170.0
margin_bottom = 170.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot7"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot8" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 180.0
margin_top = 90.0
margin_right = 260.0
margin_bottom = 170.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot8"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot9" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 270.0
margin_top = 90.0
margin_right = 350.0
margin_bottom = 170.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot9"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot10" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 360.0
margin_top = 90.0
margin_right = 440.0
margin_bottom = 170.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot10"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot11" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_top = 180.0
margin_right = 80.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot11"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot12" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 90.0
margin_top = 180.0
margin_right = 170.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot12"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot13" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 180.0
margin_top = 180.0
margin_right = 260.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot13"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot14" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 270.0
margin_top = 180.0
margin_right = 350.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot14"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot15" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 360.0
margin_top = 180.0
margin_right = 440.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot15"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot16" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_top = 270.0
margin_right = 80.0
margin_bottom = 350.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot16"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot17" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 90.0
margin_top = 270.0
margin_right = 170.0
margin_bottom = 350.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot17"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot18" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 180.0
margin_top = 270.0
margin_right = 260.0
margin_bottom = 350.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot18"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot19" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 270.0
margin_top = 270.0
margin_right = 350.0
margin_bottom = 350.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot19"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot20" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 360.0
margin_top = 270.0
margin_right = 440.0
margin_bottom = 350.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot20"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot21" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_top = 360.0
margin_right = 80.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot21"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot22" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 90.0
margin_top = 360.0
margin_right = 170.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot22"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot23" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 180.0
margin_top = 360.0
margin_right = 260.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot23"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot24" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 270.0
margin_top = 360.0
margin_right = 350.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot24"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot25" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid"]
margin_left = 360.0
margin_top = 360.0
margin_right = 440.0
margin_bottom = 440.0
texture = ExtResource( 4 )

[node name="Item" type="TextureRect" parent="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot25"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsStats" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 600.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 600 )

[node name="Placeholder" type="Control" parent="HSplitContainer/ItemsStats"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )

[node name="ItemsMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 274.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="Items" type="GridContainer" parent="HSplitContainer/ItemsStats/ItemsMargin"]
margin_left = 15.0
margin_top = 20.0
margin_right = 185.0
margin_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="HeadgearSlot" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items"]
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 8 )

[node name="HeadgearItem" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items/HeadgearSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorSlot" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items"]
margin_left = 90.0
margin_right = 170.0
margin_bottom = 80.0
texture = ExtResource( 6 )

[node name="ArmorItem" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items/ArmorSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponSlot" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items"]
margin_top = 90.0
margin_right = 80.0
margin_bottom = 170.0
texture = ExtResource( 7 )

[node name="WeaponItem" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items/WeaponSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharmSlot" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items"]
margin_left = 90.0
margin_top = 90.0
margin_right = 170.0
margin_bottom = 170.0
texture = ExtResource( 9 )

[node name="CharmItem" type="TextureRect" parent="HSplitContainer/ItemsStats/ItemsMargin/Items/CharmSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STRMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 278.0
margin_right = 200.0
margin_bottom = 303.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="STR" type="HBoxContainer" parent="HSplitContainer/ItemsStats/STRMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/STRMargin/STR"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "STR"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/STRMargin/STR"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/STRMargin/STR"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="AGIMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 307.0
margin_right = 200.0
margin_bottom = 332.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="AGI" type="HBoxContainer" parent="HSplitContainer/ItemsStats/AGIMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/AGIMargin/AGI"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "AGI"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/AGIMargin/AGI"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/AGIMargin/AGI"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="PERMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 336.0
margin_right = 200.0
margin_bottom = 361.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="PER" type="HBoxContainer" parent="HSplitContainer/ItemsStats/PERMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/PERMargin/PER"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "PER"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/PERMargin/PER"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/PERMargin/PER"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="DEFMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 365.0
margin_right = 200.0
margin_bottom = 390.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="DEF" type="HBoxContainer" parent="HSplitContainer/ItemsStats/DEFMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/DEFMargin/DEF"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "DEF"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/DEFMargin/DEF"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/DEFMargin/DEF"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="LCKMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 394.0
margin_right = 200.0
margin_bottom = 419.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="LCK" type="HBoxContainer" parent="HSplitContainer/ItemsStats/LCKMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/LCKMargin/LCK"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "LCK"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/LCKMargin/LCK"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/LCKMargin/LCK"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="CSTMargin" type="MarginContainer" parent="HSplitContainer/ItemsStats"]
margin_top = 423.0
margin_right = 200.0
margin_bottom = 448.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="CST" type="HBoxContainer" parent="HSplitContainer/ItemsStats/CSTMargin"]
margin_left = 10.0
margin_right = 190.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HSplitContainer/ItemsStats/CSTMargin/CST"]
margin_right = 134.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "CST"

[node name="Value" type="Label" parent="HSplitContainer/ItemsStats/CSTMargin/CST"]
margin_left = 138.0
margin_right = 151.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.796078, 0.160784, 1 )
text = "0"

[node name="Add" type="TextureButton" parent="HSplitContainer/ItemsStats/CSTMargin/CST"]
margin_left = 155.0
margin_right = 180.0
margin_bottom = 25.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot" to="." method="_on_ItemSlot_gui_input" binds= [ 0 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot2" to="." method="_on_ItemSlot_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot3" to="." method="_on_ItemSlot_gui_input" binds= [ 2 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot4" to="." method="_on_ItemSlot_gui_input" binds= [ 3 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot5" to="." method="_on_ItemSlot_gui_input" binds= [ 4 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot6" to="." method="_on_ItemSlot_gui_input" binds= [ 5 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot7" to="." method="_on_ItemSlot_gui_input" binds= [ 6 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot8" to="." method="_on_ItemSlot_gui_input" binds= [ 7 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot9" to="." method="_on_ItemSlot_gui_input" binds= [ 8 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot10" to="." method="_on_ItemSlot_gui_input" binds= [ 9 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot11" to="." method="_on_ItemSlot_gui_input" binds= [ 10 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot12" to="." method="_on_ItemSlot_gui_input" binds= [ 11 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot13" to="." method="_on_ItemSlot_gui_input" binds= [ 12 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot14" to="." method="_on_ItemSlot_gui_input" binds= [ 13 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot15" to="." method="_on_ItemSlot_gui_input" binds= [ 14 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot16" to="." method="_on_ItemSlot_gui_input" binds= [ 15 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot17" to="." method="_on_ItemSlot_gui_input" binds= [ 16 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot18" to="." method="_on_ItemSlot_gui_input" binds= [ 17 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot19" to="." method="_on_ItemSlot_gui_input" binds= [ 18 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot20" to="." method="_on_ItemSlot_gui_input" binds= [ 19 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot21" to="." method="_on_ItemSlot_gui_input" binds= [ 20 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot22" to="." method="_on_ItemSlot_gui_input" binds= [ 21 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot23" to="." method="_on_ItemSlot_gui_input" binds= [ 22 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot24" to="." method="_on_ItemSlot_gui_input" binds= [ 23 ]]
[connection signal="gui_input" from="HSplitContainer/InventoryVBox/CenterContainer/InventoryGrid/ItemSlot25" to="." method="_on_ItemSlot_gui_input" binds= [ 24 ]]
[connection signal="gui_input" from="HSplitContainer/ItemsStats/ItemsMargin/Items/HeadgearSlot" to="." method="_on_EquippedSlot_gui_input" binds= [ "Headgear" ]]
[connection signal="gui_input" from="HSplitContainer/ItemsStats/ItemsMargin/Items/ArmorSlot" to="." method="_on_EquippedSlot_gui_input" binds= [ "Armor" ]]
[connection signal="gui_input" from="HSplitContainer/ItemsStats/ItemsMargin/Items/WeaponSlot" to="." method="_on_EquippedSlot_gui_input" binds= [ "Weapon" ]]
[connection signal="gui_input" from="HSplitContainer/ItemsStats/ItemsMargin/Items/CharmSlot" to="." method="_on_EquippedSlot_gui_input" binds= [ "Charm" ]]
[connection signal="pressed" from="HSplitContainer/ItemsStats/STRMargin/STR/Add" to="." method="_on_STR_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/ItemsStats/AGIMargin/AGI/Add" to="." method="_on_AGI_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/ItemsStats/PERMargin/PER/Add" to="." method="_on_PER_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/ItemsStats/DEFMargin/DEF/Add" to="." method="_on_DEF_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/ItemsStats/LCKMargin/LCK/Add" to="." method="_on_LCK_Add_pressed"]
[connection signal="pressed" from="HSplitContainer/ItemsStats/CSTMargin/CST/Add" to="." method="_on_CST_Add_pressed"]
